--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OTP Request</title>
 </head>
 <body>
-    <input id="input">
+    <input id="input"><br>
     <button class="btn-otp">Request OTP</button>
     <button class="btn-val">Validate OTP</button>
 </body>
