--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="index.js" defer></script>
+    <link rel="stylesheet" href="index.css" />
     <title>OTP Request</title>
-</head>
-<body>
-    <input id="input"><br>
-    <button class="btn-otp">Request OTP</button>
-    <button class="btn-val">Validate OTP</button>
-</body>
+  </head>
+  <body>
+    <div class="top"><input id="input" /></div>
+
+    <div class="bottom">
+      <button class="btn-otp">Request OTP</button>
+      <button class="btn-val">Validate OTP</button>
+    </div>
+  </body>
 </html>
