ensured user can enter only six values

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>OTP Request</title>
   </head>
   <body>
-    <div class="top"><input id="input" /></div>
+    <div class="top"><input id="input" maxlength="6" /></div>
 
     <div class="bottom">
       <button class="btn-otp">Request OTP</button>
